cloud/kubernetes/ultimate/service/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annoations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: web-ingress
spec:
  rules:
  - host: mysite.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: websrv
            port: 
              number: 8080
